--- a/libcpp/po/da.po
+++ b/libcpp/po/da.po
@@ -1,8 +1,8 @@
 # Danish version of cpplib.
-# Copyright (C) 2016 Free Software Foundation, Inc.
+# Copyright (C) 2017 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gcc package.
 # Ole Laursen <olau@hardworking.dk>, 2001, 02, 03.
-# Joe Hansen <joedalton2@yahoo.dk>, 2015, 2016.
+# Joe Hansen <joedalton2@yahoo.dk>, 2015, 2016, 2017.
 #
 # Konventioner:
 #
@@ -128,10 +128,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: cpplib 6.1.0\n"
+"Project-Id-Version: cpplib 7.1-b20170101\n"
 "Report-Msgid-Bugs-To: http://gcc.gnu.org/bugs.html\n"
 "POT-Creation-Date: 2017-01-01 00:51+0000\n"
-"PO-Revision-Date: 2016-05-16 18:00+0200\n"
+"PO-Revision-Date: 2017-01-10 18:00+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -258,7 +258,7 @@ msgstr "konverterer undvigesekvens til kørselstegnsæt"
 
 #: charset.c:1614
 msgid "missing open quote"
-msgstr ""
+msgstr "manglende åbent citationstegn"
 
 #: charset.c:1827 charset.c:1891
 msgid "character constant too long for its type"
@@ -653,10 +653,9 @@ msgid "imaginary number in preprocessor expression"
 msgstr "imaginært tal i præprocessorudtryk"
 
 #: expr.c:1162
-#, fuzzy, c-format
-#| msgid "\"%s\" is not defined"
+#, c-format
 msgid "\"%s\" is not defined, evaluates to 0"
-msgstr "»%s« er ikke defineret"
+msgstr "»%s« er ikke defineret, evaluerer til 0"
 
 #: expr.c:1175
 msgid "assertions are a GCC extension"
