--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,7 +1,15 @@
 2017-01-10  Martin Sebor  <msebor@redhat.com>
 
+	PR testsuite/78960
+	PR testsuite/78959
+	PR testsuite/78133
+	* gcc.dg/tree-ssa/builtin-sprintf.c: Require C99 runtime.
+	* gcc.dg/tree-ssa/pr78622.c: Ditto.
+
+2017-01-10  Martin Sebor  <msebor@redhat.com>
+
 	PR middle-end/78138
-	* gcc.dg/pr78138.c: New test. 
+	* gcc.dg/pr78138.c: New test.
 
 2017-01-10  David Malcolm  <dmalcolm@redhat.com>
 
