--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/50199
+	* gcc.dg/lto/pr50199_0.c: New test.
+
 2017-01-10  Martin Sebor  <msebor@redhat.com>
 
 	PR testsuite/78960
