2017-01-11  Richard Biener  <rguenther@suse.de>
	* tree-vrp.c (evrp_dom_walker::before_dom_children): Also
	set range/nonnull info for PHI results.  Do not set it on
	stmts marked for removal.

	* gcc.dg/tree-ssa/pr61743-1.c: Adjust.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244305 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-11  Richard Biener  <rguenther@suse.de>
+
+	* tree-vrp.c (evrp_dom_walker::before_dom_children): Also
+	set range/nonnull info for PHI results.  Do not set it on
+	stmts marked for removal.
+
 2017-01-10  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* expr.c (store_field): In the bitfield case, fetch the return value
