[hsa] Fix hsa function cloning test
2017-01-11  Martin Jambor  <mjambor@suse.cz>

	* hsa.c (hsa_callable_function_p): Revert addition of DECL_ARTIFICIAL
	test.
	* ipa-hsa.c (process_hsa_functions): Only duplicate non-artificial
	decorated functions.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244308 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-11  Martin Jambor  <mjambor@suse.cz>
+
+	* hsa.c (hsa_callable_function_p): Revert addition of DECL_ARTIFICIAL
+	test.
+	* ipa-hsa.c (process_hsa_functions): Only duplicate non-artificial
+	decorated functions.
+
 2017-01-11  Richard Biener  <rguenther@suse.de>
 
 	* tree-vrp.c (evrp_dom_walker::before_dom_children): Also
