2017-01-11  Richard Biener  <rguenther@suse.de>
	PR bootstrap/79052
	* gimple-parser.c (c_parser_gimple_switch_stmt): Add missing
	returns on parse errors.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244310 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c/ChangeLog
+++ b/gcc/c/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-11  Richard Biener  <rguenther@suse.de>
+
+	PR bootstrap/79052
+	* gimple-parser.c (c_parser_gimple_switch_stmt): Add missing
+	returns on parse errors.
+
 2017-01-04  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/64767
