PR rtl-optimization/79032 	* lra-constraints.c (simplify_operand_subreg): In the MEM case, test 	the alignment of the adjusted memory reference against that of MODE, 	instead of the alignment of the original memory reference.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244311 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR rtl-optimization/79032
+	* lra-constraints.c (simplify_operand_subreg): In the MEM case, test
+	the alignment of the adjusted memory reference against that of MODE,
+	instead of the alignment of the original memory reference.
+
 2017-01-11  Martin Jambor  <mjambor@suse.cz>
 
 	* hsa.c (hsa_callable_function_p): Revert addition of DECL_ARTIFICIAL
