* g++.dg/cpp1z/decomp4.C (test): Use 2 identifier decomposition 	instead of just 1 for the decomposition from struct C.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244312 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/cpp1z/decomp4.C (test): Use 2 identifier decomposition
+	instead of just 1 for the decomposition from struct C.
+
 2017-01-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/execute/20170111-1.c: New test.
