My previous change to the Cortex-A53 scheduler resulted in a 13% regression on a proprietary benchmark.  This turned out to be due to non-optimal scheduling of int to float conversions.  This patch separates int to FP transfers from int to float conversions based on experiments to determine the best schedule.  As a result of these tweaks the performance of the benchmark improves by 20%.
    gcc/
	* config/arm/cortex-a53.md: Add bypasses for
	cortex_a53_r2f_cvt.
	(cortex_a53_r2f): Only use for transfers.
	(cortex_a53_f2r): Likewise.
	(cortex_a53_r2f_cvt): Add reservation for conversions.
	(cortex_a53_f2r_cvt): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244322 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2017-01-11  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* config/arm/cortex-a53.md: Add bypasses for
+	cortex_a53_r2f_cvt.
+	(cortex_a53_r2f): Only use for transfers.
+	(cortex_a53_f2r): Likewise.
+	(cortex_a53_r2f_cvt): Add reservation for conversions.
+	(cortex_a53_f2r_cvt): Likewise.
+
 2017-01-11  Tamar Christina  <tamar.christina@arm.com>
 
 	* config/arm/arm_neon.h: Add __artificial__ and gnu_inline
