PR c/78768 - -Walloca-larger-than and -Wformat-length warnings disabled by -flto
gcc/ChangeLog:
	* c.opt (-Walloca-larger-than, -Wformat-length, -Wformat-truncation):
	Also enable for LTO.

gcc/testsuite/ChangeLog:
	PR c/78768
	* gcc.dg/pr78768.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244326 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-11  Martin Sebor  <msebor@redhat.com>
+
+	PR c/78768
+	* c.opt (-Walloca-larger-than, -Wformat-length, -Wformat-truncation):
+	Also enable for LTO.
+
 2017-01-10  Jason Merrill  <jason@redhat.com>
 
 	Implement P0195R2, C++17 variadic using.
