--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-11  Martin Sebor  <msebor@redhat.com>
+
+	PR c/78768
+	* gcc.dg/pr78768.c: New test.
+
 2017-01-11  David Malcolm  <dmalcolm@redhat.com>
 
 	PR driver/78877
