PR c++/72813 	* gcc.c (default_compilers): Don't add -o %g.s for -S -save-temps 	of c-header.
	* c-decl.c (pop_file_scope): Set flag_syntax_only to 1 after writing
	PCH file.

	* decl2.c (c_parse_final_cleanups): Set flag_syntax_only to 1 after
	writing PCH file.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244328 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/72813
+	* gcc.c (default_compilers): Don't add -o %g.s for -S -save-temps
+	of c-header.
+
 2017-01-11  David Malcolm  <dmalcolm@redhat.com>
 
 	PR driver/78877
