--- a/gcc/c/ChangeLog
+++ b/gcc/c/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/72813
+	* c-decl.c (pop_file_scope): Set flag_syntax_only to 1 after writing
+	PCH file.
+
 2017-01-11  Richard Biener  <rguenther@suse.de>
 
 	PR bootstrap/79052
