PR c++/78341 	* parser.c (cp_parser_std_attribute_spec): Remove over-eager 	assertion.  Formatting fix.
	* g++.dg/cpp0x/pr78341.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244329 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-11  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/78341
+	* parser.c (cp_parser_std_attribute_spec): Remove over-eager
+	assertion.  Formatting fix.
+
 	PR c++/72813
 	* decl2.c (c_parse_final_cleanups): Set flag_syntax_only to 1 after
 	writing PCH file.
