--- a/gcc/go/ChangeLog
+++ b/gcc/go/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-11  Than McIntosh  <thanm@google.com>
+
+	* go-gcc.cc (conditional_expression): Add Bfunction parameter.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
