PR c/47931 - missing -Waddress warning for comparison with NULL
gcc/testsuite/ChangeLog:
	* c-c++-common/Waddress-2.c: New test.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244331 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-11  Martin Sebor  <msebor@redhat.com>
+
+	PR c/47931
+	* c-c++-common/Waddress-2.c: New test.
+
 2017-01-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/78341
