--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-11  Martin Sebor  <msebor@redhat.com>
+
+	PR c++/24511
+	* g++.dg/template/explicit9.C: New test.
+
 2017-01-11  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/77812
