* common/config/i386/i386-common.c (OPTION_MASK_ISA_SGX_UNSET): New. 	(OPTION_MASK_ISA_SGX_SET): New. 	(ix86_handle_option): Handle OPT_msgx. 	* config.gcc: Added sgxintrin.h. 	* config/i386/driver-i386.c (host_detect_local_cpu): Detect sgx. 	* config/i386/i386-c.c (ix86_target_macros_internal): Define __SGX__. 	* config/i386/i386.c (ix86_target_string): Add -msgx. 	(PTA_SGX): New. 	(ix86_option_override_internal): Handle new options. 	(ix86_valid_target_attribute_inner_p): Add sgx. 	* config/i386/i386.h (TARGET_SGX, TARGET_SGX_P): New. 	* config/i386/i386.opt: Add msgx. 	* config/i386/sgxintrin.h: New file. 	* config/i386/x86intrin.h: Add sgxintrin.h.
testsuite/ChangeLog:

	* gcc.target/i386/sgx.c New test.
	* gcc.target/i386/sse-12.c: Add -msgx.
	* gcc.target/i386/sse-13.c: Ditto.
	* gcc.target/i386/sse-14.c: Ditto.
	* gcc.target/i386/sse-22.c: Ditto.
	* gcc.target/i386/sse-23.c: Ditto.
	* g++.dg/other/i386-2.C: Ditto.
	* g++.dg/other/i386-3.C: Ditto.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244339 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,15 @@
+2017-01-11  Julia Koval  <julia.koval@intel.com>
+	    Uros Bizjak  <ubizjak@gmail.com>
+
+	* gcc.target/i386/sgx.c New test.
+	* gcc.target/i386/sse-12.c: Add -msgx.
+	* gcc.target/i386/sse-13.c: Ditto.
+	* gcc.target/i386/sse-14.c: Ditto.
+	* gcc.target/i386/sse-22.c: Ditto.
+	* gcc.target/i386/sse-23.c: Ditto.
+	* g++.dg/other/i386-2.C: Ditto.
+	* g++.dg/other/i386-3.C: Ditto.
+
 2017-01-11  Martin Sebor  <msebor@redhat.com>
 
 	PR c++/24511
