--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,20 @@
+2017-01-11  Julia Koval  <julia.koval@intel.com>
+
+	* common/config/i386/i386-common.c (OPTION_MASK_ISA_SGX_UNSET): New.
+	(OPTION_MASK_ISA_SGX_SET): New.
+	(ix86_handle_option): Handle OPT_msgx.
+	* config.gcc: Added sgxintrin.h.
+	* config/i386/driver-i386.c (host_detect_local_cpu): Detect sgx.
+	* config/i386/i386-c.c (ix86_target_macros_internal): Define __SGX__.
+	* config/i386/i386.c (ix86_target_string): Add -msgx.
+	(PTA_SGX): New.
+	(ix86_option_override_internal): Handle new options.
+	(ix86_valid_target_attribute_inner_p): Add sgx.
+	* config/i386/i386.h (TARGET_SGX, TARGET_SGX_P): New.
+	* config/i386/i386.opt: Add msgx.
+	* config/i386/sgxintrin.h: New file.
+	* config/i386/x86intrin.h: Add sgxintrin.h.
+
 2017-01-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/71537
